samples/_failures_safe/1761076848_e9adb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aaf1dce2.c: In function ‘main’:
./samples/SAFE/__tmp_aaf1dce2.c:154:17: error: expected declaration or statement at end of input
  154 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_aaf1dce2.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aaf1dce2.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aaf1dce2.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aaf1dce2.c:154:17: error: expected declaration or statement at end of input
